| Bug #21052 | Fix error message when aborting backup | ||
|---|---|---|---|
| Submitted: | 14 Jul 2006 1:14 | Modified: | 16 Feb 2008 10:31 |
| Reporter: | Jonathan Miller | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.0.24, 5.1.12 | OS: | Linux (Linux) |
| Assigned to: | Bugs System | Target Version: | |
| Triage: | D3 (Medium) | ||
[14 Jul 2006 1:14]
Jonathan Miller
[8 Aug 2006 10:08]
Stewart Smith
I think Nikolay has done the following to find this bug: 1) load some records into the cluster 2) START BACKUP NOWAIT 3) get the backup ID that was started 4) ABORT BACKUP <id> and then he gets the error message: * 3001: Could not start backup * Backup aborted by application: Permanent error: Internal error suggested fix: make the error message look something like: * 3001: Could not start backup * Backup aborted by user request.
[11 Aug 2006 12:36]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/10306 ChangeSet@1.2244, 2006-08-11 18:47:56+08:00, lzhou@dev3-138.dev.cn.tlan +3 -0 BUG#21052 Modify error message when backup is aborted
[14 Aug 2006 12:23]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/10351 ChangeSet@1.2244, 2006-08-14 18:34:36+08:00, lzhou@dev3-138.dev.cn.tlan +3 -0 BUG#21052 Modify error message when backup is aborted
[15 Aug 2006 9:06]
li zhou
Modified the error mesage displayed in mgmndb client when backup aborted and keeped the error message in cluster.log file. The error messages of mgmndb look like: -------------------------------------------------------- Connected to Management Server at: localhost:9350 Waiting for completed, this may take several minutes Node 1: Backup 3 started from node 3 Node 1: Backup 3 started from 3 has been aborted. Error: 1321 - Backup aborted byuser request: Permanent error: User defined error Backup failed * 3001: Could not start backup * Backup aborted by user request: Permanent error: User defined error ---------------------------------------------------------- the error messages in cluster.log file look like: ---------------------------------------------------------- 2006-08-15 10:02:41 [MgmSrvr] INFO -- Node 1: Backup 3 started from node 3 2006-08-15 10:02:42 [MgmSrvr] ALERT -- Node 1: Backup 3 started from 3 has been aborted. Error: 1321 ----------------------------------------------------------
[15 Aug 2006 12:32]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/10448 ChangeSet@1.2249, 2006-08-15 18:32:50+00:00, lzhou@dev3-138.dev.cn.tlan +3 -0 BUG#21052 Modify error message when backup is aborted
[16 Aug 2006 4:47]
li zhou
pushed to 5.0-ndb-bj and 5.1-ndb-bj
[10 Oct 2006 20:37]
Jonas Oreland
pushed into 5.1.12
[11 Oct 2006 9:52]
li zhou
Fixed in 5.1.12
[22 Oct 2006 8:24]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/14120 ChangeSet@1.2323, 2006-10-22 08:24:31+02:00, jonas@perch.ndb.mysql.com +1 -0 ndb - revert fix bug#21052 as it's wrong, and induces bus-error on node crashes
[23 Oct 2006 8:29]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/14148 ChangeSet@1.2258, 2006-10-23 14:09:42+00:00, lzhou@dev3-138.dev.cn.tlan +1 -0 Bug#21052 Modify the patch of bug#21052.
[23 Oct 2006 9:48]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/14153 ChangeSet@1.2331, 2006-10-23 09:48:36+02:00, jonas@perch.ndb.mysql.com +1 -0 5.1.12 - release clone ndb - revert fix bug#21052 as it's wrong, and induces bus-error on node crashes
[24 Oct 2006 12:24]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/14239 ChangeSet@1.2259, 2006-10-24 18:36:57+00:00, lzhou@dev3-138.dev.cn.tlan +1 -0 BUG#21052 Modify the overflow error existed in last patch
[26 Oct 2006 13:30]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/14420 ChangeSet@1.2259, 2006-10-26 18:46:49+00:00, lzhou@dev3-138.dev.cn.tlan +3 -0 BUG#21052 Modify the overflow error existed in last patch
[30 Oct 2006 3:39]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/14528 ChangeSet@1.2259, 2006-10-30 10:52:56+00:00, lzhou@dev3-138.dev.cn.tlan +3 -0 BUG#21052 Modify the overflow error existed in last patch
[31 Oct 2006 3:07]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/14586 ChangeSet@1.2258, 2006-10-31 10:20:50+00:00, lzhou@dev3-138.dev.cn.tlan +3 -0 BUG#21052 Modify the overflow error existed in last patch
[1 Nov 2006 3:55]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/14647 ChangeSet@1.2257, 2006-11-01 10:50:19+00:00, lzhou@dev3-138.dev.cn.tlan +3 -0 BUG#21052 Modify the overflow error existed in last patch.
[1 Nov 2006 15:40]
Jonas Oreland
pushed into 5.0.29
[1 Nov 2006 16:15]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/14691 ChangeSet@1.2281, 2006-11-01 16:14:49+01:00, jonas@perch.ndb.mysql.com +1 -0 ndb - revert bug to wait for "proper" bug fix bug#21052
[1 Nov 2006 16:24]
Jonas Oreland
also reverted original patch in 5.0
[16 Feb 2008 10:31]
Jon Stephens
Documented in the 5.0.48 and 5.1.21 changelogs as follows:
When a cluster backup was terminated using the ABORT BACKUP
command in the management client, a misleading
error message -Backup aborted by application:
Permanent error: Internal error- was returned. The
error message returned in such cases now reads -Backup aborted by
user request-.
Notes:
1. The error message/code/type listing for this error in the NDB API docs was already
corrected some time ago as that listing is periodically regenerated directly from the 5.1
sources.
2. This fix appeared prior to the release of MySQL 6.0.2, hence no need to document for
6.0.
