BUG#21052 Modify the overflow error existed in last patch.